@@ -3,17 +3,18 @@ package org.example.redoeksamenbackend.discipline;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class DisciplineService {
-    private final DisciplineRepository disciplineRepository;
+    DisciplineRepository disciplineRepository;
 
     public DisciplineService(DisciplineRepository disciplineRepository) {
         this.disciplineRepository = disciplineRepository;
     }
     
     public List<DisciplineDTO> getDisciplines() {
-        return disciplineRepository.findAll().stream().map(this::toDTO).toList();
+        return disciplineRepository.findAll().stream().map(this::toDTO).collect(Collectors.toList());
     }
 
     private DisciplineDTO toDTO(Discipline discipline) {
@@ -26,28 +27,5 @@ public class DisciplineService {
 
     public DisciplineDTO getDiscipline(Long id) {
         return disciplineRepository.findById(id).map(this::toDTO).orElse(null);
-    }
-
-    public DisciplineDTO createDiscipline(DisciplineDTO disciplineDTO) {
-        Discipline discipline = new Discipline();
-        discipline.setName(disciplineDTO.getName());
-        discipline.setResultType(disciplineDTO.getResultType());
-        return toDTO(disciplineRepository.save(discipline));
-    }
-
-
-    public DisciplineDTO updateDiscipline(Long id, DisciplineDTO disciplineDTO) {
-        return disciplineRepository.findById(id).map(discipline -> {
-            discipline.setName(disciplineDTO.getName());
-            discipline.setResultType(disciplineDTO.getResultType());
-            return toDTO(disciplineRepository.save(discipline));
-        }).orElse(null);
-    }
-
-    public DisciplineDTO deleteDiscipline(Long id) {
-        return disciplineRepository.findById(id).map(discipline -> {
-            disciplineRepository.delete(discipline);
-            return toDTO(discipline);
-        }).orElse(null);
     }
 }
